ISPN-14085 Implement otherIndexedEntities on schema update